manifests/05-deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: next
  labels:
    app: next
spec:
  replicas: 1
  selector:
    name: next
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        name: next
      name: next
    spec:
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: next-data
      containers:
        - name: next-api
          image: docker-registry.default.svc:5000/next/next:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: "public"
          args:
          - --port=:3000
          - --db_path=/persistent/next.db
          - --db_bucket=keys
          volumeMounts:
            - name: data-vol
              mountPath: "/persistent"
triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true 
      from:
        kind: ImageStreamTag
        name: next:latest
        namespace: next
      containerNames:
        - next
  - type: ConfigChange
