manifests/01-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: next
spec:
  ports:
  - name: next
    port: 443
    targetPort: 3000
  selector:
    name: next
