manifests/02-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: next
spec:
  to:
    name: next
  tls:
    termination: Edge
