manifests/99-install.yaml
kind: List
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: next
    name: next
  spec:
    lookupPolicy:
      local: true
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: next
  spec:
    to:
      name: next
    tls:
      termination: Reencrypt
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: next-data
  spec:
    accessModes:
      - ReadWriteOnce
    volumeMode: Filesystem
    resources:
      requests:
        storage: 1Gi
      storageClassName: gluster
- apiVersion: v1
  kind: Service
  metadata:
    name: next
  spec:
    ports:
    - name: next
      port: 443
      targetPort: 3000
    selector:
      name: next
- apiVersion: v1
  kind: Secret
  metadata:
    name: apikey
  type: Opaque
  data:
    key: MWYyZDFlMmU2N2Rm
- apiVersion: v1
  kind: Secret
  metadata:
    name: vsts-user-openshift-only
    annotations:
      build.openshift.io/source-secret-match-uri-1: https://goclouddevops.visualstudio.com/OpenShift/*
  type: kubernetes.io/basic-auth
  data:
    username: dXNlcm5hbWUK
    password: enQ0YW5hbXIyY2lwbmhmenFsNDM0YzJqenE0dXN5YmFucW1zc2dhZmh6NXdpcWNudWZiYQo=
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: next
    labels:
      app: next
  spec:
    replicas: 1
    selector:
      name: next
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
           alpha.image.policy.openshift.io/resolve-names: '*'
        labels:
          name: next
        name: next
      spec:
        containers:
        - name: next-api
          image: docker-registry.default.svc:5000/next/next:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            name: public
          args:
          - -port=:3000
          - -db_path=/persistent/next.db
          - -db_bucket=keys
          volumeMounts:
          - mountPath: /persistent
            name: data
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: next-data
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true 
          from:
            kind: ImageStreamTag
            name: next:latest
            namespace: next
          containerNames:
            - next
      - type: ConfigChange
- apiVersion: v1
  kind: Secret
  apiVersion: v1
  metadata:
    name: webhooksecret
  data:
    WebHookSecretKey: x4UbcmA1dm4cQGFz
- apiVersion: build.openshift.io/v1
  kind: "BuildConfig"
  metadata:
    name: "next-build" 
  spec:
    runPolicy: "Serial" 
    triggers:
      - type: Generic
        generic:
          secretReference:
            name: webhooksecret
      - type: ConfigChange
    source: 
      git:
        ref: master
        uri: https://goclouddevops.visualstudio.com/PrivateCloud/_git/next
    strategy: 
      dockerStrategy:
        noCache: true
    output: 
      to:
        kind: ImageStreamTag
        name: next:latest
- apiVersion: build.openshift.io/v1
  kind: "BuildConfig"
  metadata:
    name: "next-build-pipeline" 
  spec:
    source: 
      git:
        ref: master
        uri: https://goclouddevops.visualstudio.com/PrivateCloud/_git/next
    strategy: 
      jenkinsPipelineStrategy:
        jenkinsfilePath: Jenkinsfile
      type: JenkinsPipeline
